# scitos2

./: .dockerignore  .gitignore  CHANGELOG.rst  CMakeLists.mira  CMakeLists.txt  Dockerfile  PackageList.txt  README.md  codecov.yml  docker-compose.yaml  docker-compose.yml  package.xml
.github/: dependencies.repos  mira-installer-binary.sh  repos.repos
.github/workflows/: build.yml  docker_image.yml  repos.repos
docker/: cyclonedds.xml  ros_entrypoint.sh
include/scitos_mira/: RosLogSink.hpp  ScitosCharger.hpp  ScitosDrive.hpp  ScitosMira.hpp  ScitosModule.hpp
launch/: mira_launch.py
msg/: BatteryState.msg  BumperStatus.msg  ChargerStatus.msg  DriveStatus.msg  EmergencyStopStatus.msg
resources/CLARC/: CLARC.xml  SCITOSDriver.xml  (+1 more)
scitos2/: CMakeLists.txt  package.xml
scitos2_behavior_tree/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins_list.hpp.in  scitos2_tree_nodes.xml
scitos2_behavior_tree/include/scitos2_behavior_tree/action/: emergency_stop_service.hpp  reset_motor_stop_service.hpp  reset_motorstop_service.hpp
scitos2_behavior_tree/include/scitos2_behavior_tree/condition/: is_bumper_activated_condition.hpp
scitos2_behavior_tree/src/: generate_scitos2_tree_nodes_xml.cpp
scitos2_behavior_tree/src/action/: emergency_stop_service.cpp  reset_motor_stop_service.cpp  reset_motorstop_service.cpp
scitos2_behavior_tree/src/condition/: is_bumper_activated_condition.cpp
scitos2_behavior_tree/test/: CMakeLists.txt  test_register.cpp
scitos2_behavior_tree/test/action/: CMakeLists.txt  test_emergency_stop_service.cpp  test_reset_motor_stop_service.cpp
scitos2_behavior_tree/test/condition/: CMakeLists.txt  test_is_bumper_activated_condition.cpp
scitos2_charging_dock/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins.xml
scitos2_charging_dock/include/scitos2_charging_dock/: charging_dock.hpp  cluster.hpp  dock_saver.hpp  perception.hpp  segment.hpp  segmentation.hpp
scitos2_charging_dock/launch/: dock_saver.launch.py  docking_server.launch.py
scitos2_charging_dock/params/: docks.yaml  example.yaml
scitos2_charging_dock/src/: charging_dock.cpp  dock_saver.cpp  main_saver.cpp  perception.cpp  segmentation.cpp
scitos2_charging_dock/test/: CMakeLists.txt  dock_test.pcd  test_charging_dock.cpp  test_cluster.cpp  test_dock_saver.cpp  test_perception.cpp  test_segmentation.cpp
scitos2_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  scitos2_common-extras.cmake
scitos2_common/cmake/: mira_package.cmake
scitos2_core/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
scitos2_core/include/scitos2_core/: module.hpp  sink_logger.hpp
scitos2_mira/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
scitos2_mira/include/scitos2_mira/: ModuleFactory.hpp  ScitosMira.hpp  ScitosModule.hpp  mira_framework.hpp  module_factory.hpp  scitos_mira.hpp
scitos2_mira/include/scitos2_mira/modules/: ScitosCharger.hpp  ScitosDisplay.hpp  ScitosDrive.hpp  ScitosEBC.hpp  charger.hpp  display.hpp  drive.hpp  ebc.hpp
scitos2_mira/launch/: default.launch.py  mira.launch.py
scitos2_mira/params/: default.yaml
scitos2_mira/rules/: 99-SCITOS.rules
scitos2_mira/src/: ModuleFactory.cpp  ScitosMira.cpp  ScitosModule.cpp  main.cpp  mira_framework.cpp  module.cpp  module_factory.cpp  scitos_mira.cpp
scitos2_mira/src/modules/: ScitosDrive.cpp  ScitosEBC.cpp  charger.cpp  display.cpp  drive.cpp  ebc.cpp
scitos2_mira/test/: CMakeLists.txt  scitos_config.xml  test_mira_framework.cpp
scitos2_modules/: CHANGELOG.rst  CMakeLists.txt  README.md  modules_plugin.xml  package.xml
scitos2_modules/include/scitos2_modules/: charger.hpp  display.hpp  drive.hpp  ebc.hpp  imu.hpp
scitos2_modules/src/: charger.cpp  display.cpp  drive.cpp  ebc.cpp  imu.cpp
scitos2_modules/test/: CMakeLists.txt  test_charger.cpp  test_display.cpp  test_drive.cpp  test_ebc.cpp  test_imu.cpp
scitos2_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
scitos2_msgs/msg/: BarrierStatus.msg  BumperStatus.msg  EmergencyStopStatus.msg  RfidTag.msg
scitos2_msgs/srv/: EmergencyStop.srv  EnableMotors.srv  ResetBarrierStop.srv  ResetOdometry.srv  SaveDock.srv  SavePersistentErrors.srv  SuspendBumper.srv
scitos_behavior_tree/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  scitos_tree_nodes.xml
scitos_behavior_tree/include/scitos_behavior_tree/action/: emergency_stop_service.hpp  reset_motorstop_service.hpp
scitos_behavior_tree/include/scitos_behavior_tree/condition/: is_bumper_activated_condition.hpp
scitos_behavior_tree/src/action/: emergecy_stop_service.cpp  emergency_stop_service.cpp  reset_motorstop_service.cpp
scitos_behavior_tree/src/condition/: is_bumper_activated_condition.cpp
scitos_mira/: CHANGELOG.rst  CMakeLists.mira  CMakeLists.txt  README.md  package.xml
scitos_mira/config/: mira_config.yaml
scitos_mira/include/scitos_mira/: ModuleFactory.hpp  RosLogSink.hpp  ScitosCharger.hpp  ScitosDisplay.hpp  ScitosDrive.hpp  ScitosEBC.hpp  ScitosMira.hpp  ScitosModule.hpp
scitos_mira/include/scitos_mira/modules/: ScitosCharger.hpp  ScitosDisplay.hpp  ScitosDrive.hpp  ScitosEBC.hpp
scitos_mira/launch/: default.launch.py  mira.launch.py  mira_launch.py
scitos_mira/params/: default.yaml
scitos_mira/resources/: stations.xml
scitos_mira/resources/CLARC/: CLARC-IgnoreIntervals-SickS300.xml  CLARC-model.xml
scitos_mira/resources/WeRobot/: SCITOSDriver.xml  WeRobot.stl  WeRobots-IgnoreIntervals-SickS300.xml  WeRobots-model.xml  WeRobots.xml
scitos_mira/src/: ModuleFactory.cpp  ScitosCharger.cpp  ScitosDisplay.cpp  ScitosDrive.cpp  ScitosEBC.cpp  ScitosMira.cpp  ScitosModule.cpp  main.cpp  scitos_node.cpp
scitos_mira/src/modules/: ScitosCharger.cpp  ScitosDisplay.cpp  ScitosDrive.cpp  ScitosEBC.cpp
scitos_msgs/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
scitos_msgs/msg/: MenuEntry.msg  Mileage.msg
scitos_msgs/srv/: EnableRfid.srv  ResetMotorStop.srv
src/: ModuleFactory.cpp  ScitosCharger.cpp  ScitosDrive.cpp  ScitosMira.cpp  ScitosModule.cpp  scitos_node.cpp
srv/: ChangeForce.srv
(+1 files in other folders)
