<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>scitos_mira</name>
	<version>0.0.0</version>
	<description>A package contaning drivers for Metralabs Scitos robot base (HG4 version) using the MIRA framework.</description>
	<maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
	<license>GPL</license>
	<author email="ajtudela@gmail.com">Alberto Tudela</author>
	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>rclcpp</depend>
	<depend>boost</depend>
	<exec_depend>ros2launch</exec_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
