<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scitos2_common</name>
  <version>2.0.0</version>
  <description>Common support functionality used throughout the scitos 2 stack</description>
  <maintainer email="ajtudela@gmail.com">Alberto Tudela</maintainer>
  <license>Apache-2.0</license>
  <author email="ajtudela@gmail.com">Alberto Tudela</author>
  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>